--- a/review/templates/review/review_list.html
+++ b/review/templates/review/review_list.html
@@ -46,12 +46,12 @@
         <ul class="pagination justify-content-center mt-4">
             {% if page_obj.has_previous %}
             <li class="page-item">
-                <a href="?page={{ page_obj.previous_page_number }}" class="page-link btn-lg btn-page">Prev</a>
+                <a href="?page={{ page_obj.previous_page_number }}" class="page-link btn-lg btn-page mx-2">Prev</a>
             </li>
             {% endif %}
             {% if page_obj.has_next %}
             <li class="page-item">
-                <a href="?page={{ page_obj.next_page_number }}" class="page-link btn-lg btn-page">Next</a>
+                <a href="?page={{ page_obj.next_page_number }}" class="page-link btn-lg btn-page mx-2">Next</a>
             </li>
             {% endif %}
         </ul>
