--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,38 +1,73 @@
 {% extends "base.html" %}
 
 {% load i18n %}
+{% load account socialaccount %}
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
 <div class="container">
-  <div class="row">
-    <div class="col-md-8 mt-3 offset-md-2">
-      <h3>{% trans "Sign Up" %}</h3>
+    <div class="row align-items-center" style="min-height: 400px;">
+        <!-- Sign Up Form on the Left -->
+        <div class="col-md-5 text-left">
+            <h3>{% trans "Sign Up" %}</h3>
+            <p>
+                {% blocktrans %}
+                Welcome back to the LitRPG Library.
+                Do you already have an account? Then please
+                <a class="link" href="{{ login_url }}">sign in</a>
+                instead.
+                {% endblocktrans %}
+            </p>
+            <form class="signup mt-3" id="signup_form" method="post" action="{% url 'account_signup' %}">
+                {% csrf_token %}
+                {{ form.as_p }}
+                {% if redirect_field_value %}
+                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                {% endif %}
+                <button class="btn btn-signup mb-4" type="submit">
+                    {% trans "Sign Up" %}
+                </button>
+            </form>
+        </div>
+        <!-- OR Divider -->
+        <div class="col-md-2 my-4 my-md-0 d-flex align-items-center justify-content-center">
+          <div class="divider">
+              <span class="or-text">{% trans "- OR -" %}</span>
+          </div>
+      </div>
 
-      <p>{% blocktrans %}
-        Welcome back to the LitRPG Library.
-        Do you already have an account? Then please
-        <a class="link" href="{{ login_url }}">sign in</a>
-        instead.
-      {% endblocktrans %}</p>
+         <!-- Google Login Button on the Right -->
+         <div class="col-md-5 col-lg-4 mb-5">
+          <div class="d-flex justify-content-center align-items-center">
+              <button class="gsi-material-button">
+                  <div class="gsi-material-button-state"></div>
+                  <div class="gsi-material-button-content-wrapper">
+                      <div class="gsi-material-button-icon">
+                          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"
+                              xmlns:xlink="http://www.w3.org/1999/xlink" style="display: block;">
+                              <path fill="#EA4335"
+                                  d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z">
+                              </path>
+                              <path fill="#4285F4"
+                                  d="M46.98 24.55c0-1.57-.15-3.09-.38-4.55H24v9.02h12.94c-.58 2.96-2.26 5.48-4.78 7.18l7.73 6c4.51-4.18 7.09-10.36 7.09-17.65z">
+                              </path>
+                              <path fill="#FBBC05"
+                                  d="M10.53 28.59c-.48-1.45-.76-2.99-.76-4.59s.27-3.14.76-4.59l-7.98-6.19C.92 16.46 0 20.12 0 24c0 3.88.92 7.54 2.56 10.78l7.97-6.19z">
+                              </path>
+                              <path fill="#34A853"
+                                  d="M24 48c6.48 0 11.93-2.13 15.89-5.81l-7.73-6c-2.15 1.45-4.92 2.3-8.16 2.3-6.26 0-11.57-4.22-13.47-9.91l-7.98 6.19C6.51 42.62 14.62 48 24 48z">
+                              </path>
+                              <path fill="none" d="M0 0h48v48H0z"></path>
+                          </svg>
+                      </div>
+                      <a href="{% provider_login_url 'google' %}" class="btn gsi-material-button-contents">
+                          {% trans "Sign In with Google" %}
+                      </a>
+                  </div>
+              </button>
+          </div>
+          <div class="col-lg-1"></div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-md-8 mt-3 offset-md-2 mb-5">
-      <form class="signup" id="signup_form" method="post"
-        action="{% url 'account_signup' %}">
-        {% csrf_token %}
-        {{ form.as_p }}
-        {% if redirect_field_value %}
-        <input type="hidden" name="{{ redirect_field_name }}"
-          value="{{ redirect_field_value }}" />
-        {% endif %}
-        <button class="btn btn-signup right" type="submit">
-          {% trans "Sign Up" %} </button>
-      </form>
-    </div>
-  </div>
 </div>
-
 {% endblock %}
