Fix: index page styling - must have deleted a div somewhere, TBR button now takes you to correct page

--- a/templates/base.html
+++ b/templates/base.html
@@ -133,7 +133,7 @@
         {% endblock content %}
 
 
-    <div class="b-example-divider"></div>
+    <div class="b-example-divider mt-4"></div>
 
     <!-- Footer -->
     <div class="container">
