--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -8,6 +8,7 @@
 {% block content %}
 <div class="container">
     <div class="row align-items-center" style="min-height: 400px;">
+      <div class="col-lg-1"></div>
         <!-- Sign Up Form on the Left -->
         <div class="col-md-5 text-left">
             <h3>{% trans "Sign Up" %}</h3>
