--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                 {% if user.is_authenticated %}
                 <a href="{% url 'account_logout' %}" class="btn btn-logout btn-lg px-4 me-md-2">Logout</a>
-                <a href="{% url 'to_be_read' %}" class="btn btn-tbrlist btn-lg px-4 me-md-2">TBR List</a>
+                <a href="{% url 'tbr_list' %}" class="btn btn-tbrlist btn-lg px-4 me-md-2">TBR List</a>
                 {% else %}
                 <a href="{% url 'account_signup' %}" class="btn btn-signup btn-lg px-4 me-md-2">Register</a>
                 <a href="{% url 'account_login' %}" class="btn btn-login btn-lg px-4 me-md-2">Login</a>
