--- a/templates/index.html
+++ b/templates/index.html
@@ -152,4 +152,46 @@
     </div>
 </div>
 
+<div class="b-example-divider mt-4"></div>
+
+<!-- Call to Action / Your Reviews -->
+<div class="container text-center py-5">
+    <div class="row justify-content-center">
+        {% if user.is_authenticated %}
+        <div class="col-md-8">
+            <!-- Constrain width of the content -->
+            <h2>Welcome Back, {{ user.username }}!</h2>
+            <p>We're glad to have you as part of our LitRPG community. Explore new reviews, share your thoughts, or dive
+                into featured books today!</p>
+
+            {% if user_reviews %}
+            <h3>Your Recent Reviews</h3>
+            <div class="row justify-content-center">
+                <div class="col-md-5">
+                    <ul class="list-group">
+                        {% for review in user_reviews %}
+                        <li class="list-group-item">
+                            <a href="{% url 'review_detail' review.slug %}" class="custom-link">{{ review.title }}</a>
+                            <p class="small">Posted on {{ review.created_on|date:"F j, Y" }}</p>
+                        </li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+            {% else %}
+            <p>You haven't written any reviews yet. <a href="{% url 'add_review' %}">Write your first review</a>!</p>
+            {% endif %}
+        </div>
+        {% else %}
+        <div class="col-md-6">
+            <!-- Constrain width for guest content -->
+            <h2>Join Our LitRPG Community!</h2>
+            <p>Register now to discover, review, and discuss your favorite LitRPG books.</p>
+            <a href="{% url 'account_signup' %}" class="btn btn-signup btn-lg">Sign Up</a>
+            <a href="{% url 'account_login' %}" class="btn btn-login btn-lg">Log In</a>
+        </div>
+        {% endif %}
+    </div>
+</div>
+
 {% endblock %}
