--- a/to_be_read/templates/to_be_read/tbr_list.html
+++ b/to_be_read/templates/to_be_read/tbr_list.html
@@ -45,7 +45,7 @@
                                     <form action="{% url 'delete_from_tbr' entry.id %}" method="post"
                                         style="display:inline;">
                                         {% csrf_token %}
-                                        <button type="submit" class="btn btn-sm btn-signup">Remove</button>
+                                        <button type="submit" class="btn btn-sm btn-signup m-2">Remove</button>
                                     </form>
                                 </div>
                             </div>
