--- a/review/templates/review/review_detail.html
+++ b/review/templates/review/review_detail.html
@@ -10,14 +10,6 @@
     <div class="row g-0">
       <div class="col-md-6 masthead-text">
         <h1 class="post-title my-2 mx-2">{{ review.title }}: by {{book.book_author}}</h1>
-        <p class="review-subtitle my-2 mx-2">
-          {{ review.user }} |
-          {% if review.updated_on > review.created_on %}
-          Updated on {{ review.updated_on|date:"F j, Y, g:i a" }}
-          {% else %}
-          Created on {{ review.created_on|date:"F j, Y, g:i a" }}
-          {% endif %}
-        </p>
       </div>
       <div class="d-none d-md-block col-md-6 masthead-image">
         <!-- Optional image content for the masthead -->
@@ -142,8 +134,8 @@
           {% if comment.rating %}
           <p>
             Rating:
-            {% for i in 1|add:""|default_if_none:""|add:"2345" %}
-            {% if forloop.counter <= comment.rating %}
+            {% for i in star_range %}
+            {% if i <= comment.rating %}
             <i class="fas fa-star" style="color: gold;"></i> <!-- Filled star -->
             {% else %}
             <i class="far fa-star" style="color: gold;"></i> <!-- Empty star -->
@@ -151,11 +143,16 @@
             {% endfor %}
           </p>
           <div class="mb-2">
-            <!-- Comment Like Button -->
+            {% if user.is_authenticated %}
+            <!-- Comment Like Button for Authenticated Users -->
             <button class="like-comment-btn btn-lg" data-comment-id="{{ comment.pk }}">
               <i class="fa {% if user in comment.likes.all %}fas fa-thumbs-up{% else %}far fa-thumbs-up{% endif %}"></i>
               <span id="comment-likes-{{ comment.pk }}">{{ comment.likes.count }}</span>
             </button>
+            {% else %}
+            <!-- Optional: Message or Disabled Button for Guests -->
+            <p class="text-muted">Log in to like this comment.</p>
+            {% endif %}
           </div>
           {% endif %}
           {% if not comment.approved and comment.user == user %}
