--- a/templates/index.html
+++ b/templates/index.html
@@ -170,8 +170,8 @@
                 <div class="col-md-5">
                     <ul class="list-group">
                         {% for review in user_reviews %}
-                        <li class="list-group-item">
-                            <a href="{% url 'review_detail' review.slug %}" class="custom-link">{{ review.title }}</a>
+                        <li class="list-group-item your-reviews">
+                            <a href="{% url 'review_detail' review.slug %}" class="your-reviews-link" style="color:#91a5fe; text-decoration: none; font-weight:700;">{{ review.title }}</a>
                             <p class="small">Posted on {{ review.created_on|date:"F j, Y" }}</p>
                         </li>
                         {% endfor %}
