--- a/review/templates/review/review_edit.html
+++ b/review/templates/review/review_edit.html
@@ -9,16 +9,18 @@
   </div>
   <div class="row justify-content-center">
     <div class="col-12 col-md-6 my-5">
+      {% if user.is_authenticated %}
       <h2>Edit Your Review</h2>
       <p>Make changes to your review below.</p>
       <form method="post">
+        {{ form | crispy }}
         {% csrf_token %}
-        <div class="form-group">
-          {{ form.as_p }}
-        </div>
         <button class="btn btn-login" type="submit">Save Changes</button>
         <a href="{% url 'review_detail' slug=review.slug %}" class="btn btn-signup">Cancel</a>
       </form>
+      {% else %}
+      <p>Log in to edit a review.</p>
+      {% endif %}
     </div>
   </div>
 </div>
