--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,10 @@
     <!-- Star Rating CSS -->
     <link rel="stylesheet" href="{% static 'star-ratings/css/star-ratings.css' %}">
 
+    <!-- Summernote -->
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.20/summernote-lite.min.css" rel="stylesheet">
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
@@ -60,43 +64,51 @@
             <a class="navbar-brand" href="{% url 'home' %}">
                 <img src="{% static 'images/logo.webp' %}" alt="LitRPG Library Logo" width="190" height="60">
             </a>
-    
+
             <!-- Toggler Button for Mobile View -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04"
+                aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-    
+
             <!-- Collapsible Navbar Links -->
             <div class="collapse navbar-collapse" id="navbarsExample04">
                 <!-- Navigation Links -->
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link {% if request.resolver_match.url_name == 'home' %}active{% endif %}" href="{% url 'home' %}">Home</a>
+                        <a class="nav-link {% if request.resolver_match.url_name == 'home' %}active{% endif %}"
+                            href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.resolver_match.url_name == 'review_list' %}active{% endif %}" href="{% url 'review_list' %}">Reviews</a>
+                        <a class="nav-link {% if request.resolver_match.url_name == 'review_list' %}active{% endif %}"
+                            href="{% url 'review_list' %}">Reviews</a>
                     </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">User Menu</a>
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">User Menu</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="{% url 'add_book' %}">Add Book</a></li>
                             <li><a class="dropdown-item" href="{% url 'add_review' %}">Add Review</a></li>
                             <li><a class="dropdown-item" href="{% url 'tbr_list' %}">TBR List</a></li>
-                            <li><hr class="dropdown-divider"></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
                             <li><a class="dropdown-item" href="{% url 'account_logout' %}">Log Out</a></li>
                         </ul>
                     </li>
                     {% else %}
                     <li class="nav-item">
-                        <a class="nav-link {% if request.resolver_match.url_name == 'account_signup' %}active{% endif %}" href="{% url 'account_signup' %}">Register</a>
+                        <a class="nav-link {% if request.resolver_match.url_name == 'account_signup' %}active{% endif %}"
+                            href="{% url 'account_signup' %}">Register</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.resolver_match.url_name == 'account_login' %}active{% endif %}" href="{% url 'account_login' %}">Login</a>
+                        <a class="nav-link {% if request.resolver_match.url_name == 'account_login' %}active{% endif %}"
+                            href="{% url 'account_login' %}">Login</a>
                     </li>
                     {% endif %}
                 </ul>
-    
+
                 <!-- Login Status -->
                 <span class="navbar-text ms-auto text-nowrap">
                     {% if user.is_authenticated %}
@@ -108,7 +120,7 @@
             </div>
         </div>
     </nav>
-    
+
 
     <!-- displaying Django messages -->
 
@@ -126,11 +138,11 @@
         </div>
     </div>
 
-    
 
-        {% block content %}
-        <!-- Content Goes here -->
-        {% endblock content %}
+
+    {% block content %}
+    <!-- Content Goes here -->
+    {% endblock content %}
 
 
     <div class="b-example-divider mt-4"></div>
@@ -138,48 +150,59 @@
     <!-- Footer -->
     <div class="container">
         <footer class="py-3 my-4">
-          <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item"><a href="{% url 'home' %}" class="nav-link px-2 text-body-secondary">Home</a></li>
-            <li class="nav-item"><a href="{% url 'review_list' %}" class="nav-link px-2 text-body-secondary">Reviews</a></li>
-            {% if user.is_authenticated %}
-            <li class="nav-item"><a href="{% url 'add_book' %}" class="nav-link px-2 text-body-secondary">Add Book</a></li>
-            <li class="nav-item"><a href="{% url 'add_review' %}" class="nav-link px-2 text-body-secondary">Add Review</a></li>
-            <li class="nav-item"><a href="{% url 'tbr_list' %}" class="nav-link px-2 text-body-secondary">TBR List</a></li>
-            {% else %}
-            <li class="nav-item"><a href="{% url 'account_signup' %}" class="nav-link px-2 text-body-secondary">Register</a></li>
-            <li class="nav-item"><a href="{% url 'account_login' %}" class="nav-link px-2 text-body-secondary">Login</a></li>
-            {%endif%}
-          </ul>
-          <p class="text-center text-body-secondary">&copy; 2024 Laura Hall</p>
-          <div class="social-border">
-            <ul class="social-links list-inline text-center">
-                <li class="list-inline-item">
-                    <a target="_blank" href="https://linkedin.com/in/laura-hall-dev">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="3em" height="3em" viewBox="0 0 20 20">
-                            <path fill="#597FFC"
-                                d="M10 .4C4.698.4.4 4.698.4 10s4.298 9.6 9.6 9.6s9.6-4.298 9.6-9.6S15.302.4 10 .4M7.65 13.979H5.706V7.723H7.65zm-.984-7.024c-.614 0-1.011-.435-1.011-.973c0-.549.409-.971 1.036-.971s1.011.422 1.023.971c0 .538-.396.973-1.048.973m8.084 7.024h-1.944v-3.467c0-.807-.282-1.355-.985-1.355c-.537 0-.856.371-.997.728c-.052.127-.065.307-.065.486v3.607H8.814v-4.26c0-.781-.025-1.434-.051-1.996h1.689l.089.869h.039c.256-.408.883-1.01 1.932-1.01c1.279 0 2.238.857 2.238 2.699z">
-                        </svg>
-                        <span class="sr-only">LinkedIn</span>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a target="_blank" href="https://github.com/laurachri-hall">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="3em" height="3em" viewBox="0 0 24 24">
-                            <path fill="#597FFC"
-                                d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33s1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2">
-                        </svg>
-                        <span class="sr-only">GitHub</span>
-                    </a>
-                </li>
+            <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                <li class="nav-item"><a href="{% url 'home' %}" class="nav-link px-2 text-body-secondary">Home</a></li>
+                <li class="nav-item"><a href="{% url 'review_list' %}"
+                        class="nav-link px-2 text-body-secondary">Reviews</a></li>
+                {% if user.is_authenticated %}
+                <li class="nav-item"><a href="{% url 'add_book' %}" class="nav-link px-2 text-body-secondary">Add
+                        Book</a></li>
+                <li class="nav-item"><a href="{% url 'add_review' %}" class="nav-link px-2 text-body-secondary">Add
+                        Review</a></li>
+                <li class="nav-item"><a href="{% url 'tbr_list' %}" class="nav-link px-2 text-body-secondary">TBR
+                        List</a></li>
+                {% else %}
+                <li class="nav-item"><a href="{% url 'account_signup' %}"
+                        class="nav-link px-2 text-body-secondary">Register</a></li>
+                <li class="nav-item"><a href="{% url 'account_login' %}"
+                        class="nav-link px-2 text-body-secondary">Login</a></li>
+                {%endif%}
             </ul>
-        </div>
+            <p class="text-center text-body-secondary">&copy; 2024 Laura Hall</p>
+            <div class="social-border">
+                <ul class="social-links list-inline text-center">
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://linkedin.com/in/laura-hall-dev">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="3em" height="3em" viewBox="0 0 20 20">
+                                <path fill="#597FFC"
+                                    d="M10 .4C4.698.4.4 4.698.4 10s4.298 9.6 9.6 9.6s9.6-4.298 9.6-9.6S15.302.4 10 .4M7.65 13.979H5.706V7.723H7.65zm-.984-7.024c-.614 0-1.011-.435-1.011-.973c0-.549.409-.971 1.036-.971s1.011.422 1.023.971c0 .538-.396.973-1.048.973m8.084 7.024h-1.944v-3.467c0-.807-.282-1.355-.985-1.355c-.537 0-.856.371-.997.728c-.052.127-.065.307-.065.486v3.607H8.814v-4.26c0-.781-.025-1.434-.051-1.996h1.689l.089.869h.039c.256-.408.883-1.01 1.932-1.01c1.279 0 2.238.857 2.238 2.699z">
+                            </svg>
+                            <span class="sr-only">LinkedIn</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://github.com/laurachri-hall">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="3em" height="3em" viewBox="0 0 24 24">
+                                <path fill="#597FFC"
+                                    d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33s1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2">
+                            </svg>
+                            <span class="sr-only">GitHub</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </footer>
-      </div>
-      <!-- scripts -->
+    </div>
+    <!-- scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
     </script>
     <script src="{% static 'star-ratings/js/dist/star-ratings.min.js' %}"></script>
+    <!-- jQuery (required for Summernote) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.20/summernote-lite.min.js"></script>
+    <script src="{% static 'js/summernote.js' %}"></script>
+
 
     {% block extras %}
     {% endblock %}
