--- a/static/css/style.css
+++ b/static/css/style.css
@@ -697,6 +697,15 @@ footer .social-links li:active svg path {
 
 }
 
+@media (max-width: 768px) {
+    .gsi-material-button {
+        display: flex;
+        justify-content: center; /* Center horizontally */
+        align-items: center; /* Center vertically */
+        margin: 0 auto; /* Optional: ensure it aligns well */
+    }
+}
+
 
 
 
